--- a/app/src/main/res/layout/mod_password.xml
+++ b/app/src/main/res/layout/mod_password.xml
@@ -22,6 +22,7 @@
         android:layout_marginBottom="8dp"
         android:backgroundTint="#FBE236"
         android:hint="Vecchia Password"
+        android:inputType="textPassword"
         android:padding="8dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#9C9C9C"
@@ -35,6 +36,7 @@
         android:layout_marginBottom="8dp"
         android:backgroundTint="#FBE236"
         android:hint="Nuova password"
+        android:inputType="textPassword"
         android:padding="8dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#9C9C9C"
@@ -48,6 +50,7 @@
         android:layout_marginBottom="8dp"
         android:backgroundTint="#FBE236"
         android:hint="Conferma Password"
+        android:inputType="textPassword"
         android:padding="8dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#9C9C9C"
