--- a/app/src/main/res/layout/libro_layout.xml
+++ b/app/src/main/res/layout/libro_layout.xml
@@ -60,6 +60,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/copertina" />
 
+            <TextView
+                android:id="@+id/nVotiText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="(0)"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
+                app:layout_constraintStart_toEndOf="@+id/ratingBar"
+                app:layout_constraintTop_toTopOf="@+id/ratingBar" />
+
             <LinearLayout
                 android:id="@+id/linearLayoutInfiLibro"
                 android:layout_width="match_parent"
