--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -21,61 +21,73 @@ tools:context=".user.Register_Fragment">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/text"
         android:hint="Nome"
         android:inputType="textPersonName"
         android:padding="8dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#9C9C9C" />
+        android:textColorHint="#9C9C9C"
+        android:typeface="monospace" />
 
     <EditText
         android:id="@+id/campoRegisterCognome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/text"
         android:hint="Cognome"
         android:inputType="textPersonName"
         android:padding="8dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#9C9C9C" />
+        android:textColorHint="#9C9C9C"
+        android:typeface="monospace" />
 
     <EditText
         android:id="@+id/campoRegisterUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/text"
         android:hint="Nome Utente"
         android:inputType="textPersonName"
         android:padding="8dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#9C9C9C" />
+        android:textColorHint="#9C9C9C"
+        android:typeface="monospace" />
 
     <EditText
         android:id="@+id/campoRegisterPassword1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/text"
         android:hint="Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:padding="8dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#9C9C9C" />
+        android:textColorHint="#9C9C9C"
+        android:typeface="monospace" />
 
     <EditText
         android:id="@+id/campoRegisterPassword2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/text"
         android:hint="Conferma Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:padding="8dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#9C9C9C" />
+        android:textColorHint="#9C9C9C"
+        android:typeface="monospace" />
 
     <Button
         android:id="@+id/button_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/green_button"
         android:padding="12dp"
-        android:text="Registrati" />
+        android:text="Registrati"
+        android:typeface="monospace" />
 
 </LinearLayout>
